Fix video wrapper aspect ratio and remove empty white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -708,13 +708,14 @@ a:hover {
 
 .video-wrapper {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio */
-    height: 0;
-    overflow: hidden;
+    width: 100%;
+    min-height: 500px;
+    background: #000;
 }
 
 .video-wrapper iframe,
-.video-wrapper > div {
+.video-wrapper > div,
+.video-wrapper > div > iframe {
     position: absolute;
     top: 0;
     left: 0;
@@ -723,13 +724,11 @@ a:hover {
     border: none;
 }
 
-.video-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
+#video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
 }
 
 .video-item iframe {
